@@ -5,6 +5,7 @@ git-annex (6.20160614) UNRELEASED; urgency=medium
     Thanks, Farhan Kathawala.
   * get: Add --batch and --json options.
   * New url for git-remote-gcrypt, now maintained by spwhitton.
+  * testremote: Fix crash when testing a freshly made external special remote.
 
  -- Joey Hess <id@joeyh.name>  Mon, 13 Jun 2016 21:52:24 -0400
 
